[All] Resolved logging bug

--- a/website/application/templates/user.html
+++ b/website/application/templates/user.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Your profile{% endblock %}
+{% block title %}{{ '@' + user['username'] }}{% endblock %}
 
 
 {% block css %}
