--- a/website/application/static/style/user.css
+++ b/website/application/static/style/user.css
@@ -1,23 +1,34 @@
 .flex {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 #propic {
 	margin-top: 4vh;
-	align-self: center;
 }
 
-#username {
+#name {
 	margin-top: 3vh;
-	align-self: center;
 	font-size: 1.8em;
 	font-weight: bold;
 }
 
-#user_email {
+#username {
 	margin-top: 1vh;
-	align-self: center;
 	font-size: 1.5em;
 	color: #696969;
+}
+
+#tag {
+	padding: .5vh;
+	border-radius: 5px;
+	background-color: #cc4100;
+	color: white;
+	font-size: 1em;
+}
+
+#user_email {
+	margin-top: 2.5vh;
+	font-size: 1.5em;
 }
