--- a/website/application/templates/post.html
+++ b/website/application/templates/post.html
@@ -10,7 +10,7 @@
 	<div class="post-container">
 		<div class="post-section" id="post-title">Lorem ipsum dolor	sit amet</div>
 		<div class="post-section" id="post-author">
-			Written by: @<a href="#" class="link">Caesar-7</a> &bull; Approved by: @<a href="#" class="link">Gianluparri03</a>
+			written by: <a href="#" class="link">ff</a> &bull; approved by: <a href="#" class="link">ff</a>
 		</div>
 		<div class="post-section" id="post-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 	</div>
