--- a/website/application/static/style/view_user.css
+++ b/website/application/static/style/view_user.css
@@ -1,23 +1,48 @@
 .flex {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 #propic {
 	margin-top: 4vh;
-	align-self: center;
+}
+
+.flex2 {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 #username {
 	margin-top: 3vh;
-	align-self: center;
 	font-size: 1.8em;
 	font-weight: bold;
 }
 
+.flag {
+	margin-left: 1vh;
+	margin-top: 3vh;
+	padding: .5vh;
+	border-radius: 5px;
+	color: white;
+	font-size: 1em;
+}
+
+#mod {
+	background-color: #e38d30;
+}
+
+#admin {
+	background-color: #0499cf;
+}
+
+#owner {
+	background-color: #cc4100;
+}
+
 #user_email {
 	margin-top: 1vh;
-	align-self: center;
 	font-size: 1.5em;
 	color: #696969;
 }
