--- a/website/application/templates/view_user.html
+++ b/website/application/templates/view_user.html
@@ -11,7 +11,16 @@
 		<svg id="propic" height="200" width="200">
 			<circle cx="100" cy="100" r="100" stroke="black" stroke-width=".5" />
 		</svg>
-		<div id="username">{{ '@' + user['username'] }}</div>
+		<div class="flex2">
+			<div id="username">{{ '@' + user['username'] }}</div>
+			{% if user["perms"] == 1 %}
+  				<span class="flag" id="mod">Moderator</span>
+			{% elif user["perms"] == 2 %}
+  				<span class="flag" id="admin">Admin</span>
+			{% elif user["perms"] == 3 %}
+  				<span class="flag" id="owner">Owner</span>
+			{% endif %}
+		</div>
 		<div id="user_email">{{ user['email'] }}</div>
 	</div>
 {% endblock %}
