[Website] Added "AMA/Just Chatting" button

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -34,6 +34,7 @@
 					<li class="button"><a href=".."><i class="fas fa-code"></i> Informatica</a></li>
 					<li class="button"><a href=".."><i class="fas fa-flask"></i> Scienza</a></li>
 					<li class="button"><a href=".."><i class="fas fa-feather-alt"></i> Dev's Blog</a></li>
+					<li class="button"><a href=".."><i class="fab fa-rocketchat"></i> AMA/Just Chatting</a></li>
 					<div id="not_logged_buttons">
 						<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
 						<li class="button rbutton"><a href="register">Register</a></li>
