Now the Navbar works with Bootstrap (maybe...)

--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -16,49 +16,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-/* Navbar */
-
-.navbar {
-	position: fixed;
-	list-style-type: none;
-	padding: 5px;
-	width: 100%;
-	margin-top: -6px;
-	overflow: hidden;
-	background-color: #0499cf;
-	font-size: 1.2em;
-}
-
-.menu {
-	position: fixed;
-	top: 6px;	
-	left: 0px;
-}
-
-/* Buttons in navbar */
-
-.button {
-	float: left;
-	background-color: #0499cf;
-	color: white;
-	border: none;
-}
-
-.button a {
-	display: block;
-	padding: 1.3vh;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-}
-
-.button a:hover {
-	background-color: #34bdeb;
-	border-radius: 5px;
-	font-weight: bold;
-}
-
-.rbutton {
+.bright{
 	float: right;
 }
 
