--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -30,27 +30,35 @@
 
 	<body>
 		{% if (nav | default("there", false)) %}
-			<nav class="menu">
-				<ul class="navbar">
-					<li class="button"><a href=".."><i class="fas fa-home"></i> Home</a></li>
-					<li class="button"><a href=".."><i class="fas fa-globe-americas"></i> News & Attualit&agrave;</a></li>
-					<li class="button"><a href=".."><i class="fas fa-cat"></i> Meme</a></li>
-					<li class="button"><a href=".."><i class="fas fa-code"></i> Informatica</a></li>
-					<li class="button"><a href=".."><i class="fas fa-flask"></i> Scienza</a></li>
-					<li class="button"><a href=".."><i class="fas fa-feather-alt"></i> Dev's Blog</a></li>
-					<li class="button"><a href=".."><i class="fab fa-rocketchat"></i> AMA/Just Chatting</a></li>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+ 				<div>
+ 					<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-globe-americas"></i> News & Attualit&agrave;</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-feather-alt"></i> Dev's Blog</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button>
+					<button class="btn bg-primary dropdown" type="button">
+						<a class="text-white dropdown-toggle text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-list"></i> Dropdown</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</button>
 					<div id="not_logged_buttons">
-						<li class="button rbutton"><a href="login" style="margin-right: 2vh">Login</a></li>
-						<li class="button rbutton"><a href="register">Register</a></li>
+						<a href="../register" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
+						<a href="../login" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
 					</div>
-
 					<div id="logged_buttons">
-						<li class="button rbutton"><a href="user" style="margin-right: 2vh"><i class="fas fa-user"></i> Profile</a></li>
-						<li class="button rbutton"><a href="logout"><i class="fas fa-user-slash"></i> Logout</a></li>
-						<li class="button rbutton"><a href="../create_post"><i class="fas fa-plus-square"></i> Crea Post</a></li>
+						<a href="../create_post" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+						<a href="../logout" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button>
+						<a href="../user" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-user"></i> Profile</button></a></a>
 					</div>
-				</ul>
-			</nav>	
+				</div>
+			</nav>
 		{% endif %}
 
 		<main>{% block content %}{% endblock %}</main>
@@ -70,7 +78,8 @@
 
 		{% if (footer | default("there", false)) %}
 			<nav class="footer">
-				<span class="fbutton"><a href=".."><i class="fas fa-users"></i> About</span></a>
+				<span class="fbutton"><a href=".."><i class="fas fa-home"></i> Home</span></a>
+				<span class="fbutton"><a href="#"><i class="fas fa-users"></i> About</span></a>
 				<span class="fbutton"><a href="#"><i class="fas fa-tools"></i> Supporto</span></a>
 				<span class="fbutton"><a href="#"><i class="fab fa-github"></i> Github</span></a>
 				<span><a href='#' title='Torna su'><i class="far fa-arrow-alt-circle-up"></i></a></span>
