--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -33,7 +33,7 @@
 			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
  				<div>
  					<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-globe-americas"></i> News & Attualit&agrave;</button></a>
+ 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
  					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
  					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
  					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
