--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -6,6 +6,7 @@
 		<!--  STYLE  -->
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		{% block css %}{% endblock %}
 
@@ -30,35 +31,67 @@
 
 	<body>
 		{% if (nav | default("there", false)) %}
-			<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
- 				<div>
- 					<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-feather-alt"></i> Dev's Blog</button></a>
- 					<a href="#" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button>
-					<button class="btn bg-primary dropdown" type="button">
-						<a class="text-white dropdown-toggle text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-list"></i> Dropdown</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
+			<nav class="navbar navbar-expand-xl navbar-dark bg-primary">
+ 				<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse-target">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="collapse-target">
+				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N</b></span>
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="" data-target="dropdown_target" href="#" data-toggle="dropdown">
+								<button class="btn bg-primary text-white" type="button"><i class="fas fa-chevron-circle-down"></i> Dropdown</button>								
+							</a>
+							<div class="dropdown-menu" 	aria-labelledby="dropdown_target">
+								<ul class="navbar-nav">
+								<a href=".." class="dropdown-item"><button class="btn bg-primary text-white" type="button">Action</button></a>
+								<a href=".." class="dropdown-item"><button class="btn bg-primary text-white" type="button">Another Action</button></a>
+								</ul>
+							</div>	
+						</li>
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
+						</li>
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
+						</li>
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
+						</li>
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
+						</li>
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-feather-alt"></i> Dev's Blog</button></a>
+						</li>
+						<li class="nav-item">
+							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
+						</li>
+						<div id="not_logged_buttons">
+							<li class="navbar-nav">
+								<a href="../register" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
+							</li>
+							<li class="navbar-nav">
+								<a href="../login" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
+							</li>
 						</div>
-					</button>
-					<div id="not_logged_buttons">
-						<a href="../register" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
-						<a href="../login" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
-					</div>
-					<div id="logged_buttons">
-						<a href="../create_post" class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
-						<a href="../logout" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button>
-						<a href="../user" class="text-decoration-none"><button class="btn bg-primary text-white bright" type="button"><i class="fas fa-user"></i> Profile</button></a></a>
-					</div>
+						<div id="logged_buttons">
+							<li class="navbar-nav">
+								<a href="../create_post" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+							</li>
+							<li class="navbar-nav">
+								<a href="../user" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
+							</li>
+							<li class="navbar-nav">
+								<a href="../logout" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
+							</li>
+						</div>
+					</ul>
 				</div>
-			</nav>
+			</nav>		
 		{% endif %}
 
 		<main>{% block content %}{% endblock %}</main>
