--- a/graficis/EnryBartoK/layout.css
+++ b/graficis/EnryBartoK/layout.css
@@ -16,13 +16,15 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-.bright{
-	float: right;
+.n{
+	font-family: 'Stylish', sans-serif; 
+	font-size: 20px;
+	font-weight: bolder;
 }
 
 /* Footer */
 
-.footer {
+/*.footer {
 	position: static;
 	bottom: 0;
 	width: 100%;
@@ -32,17 +34,21 @@ body {
 	align-items: center;
 	font-size: 1.15em;
 	background-color: #e38d30;
+}*/
+
+.foot{
+	background-color: #e38d30;
 }
 
 /* Buttons in Footer */
 
 .fbutton {
-	float: left;
+	/*float: left;*/
 	background-color: #e38d30;
-	color: white;
-	border: none;
+	/*color: white;*/
+	/*border: none;
 	padding: 1.5vh;
-	cursor: pointer;
+	cursor: pointer;*/
 }
 
 .fbutton a {
