--- a/website/application/templates/create_post.html
+++ b/website/application/templates/create_post.html
@@ -10,6 +10,6 @@
 	<form method="GET" action="/create_post">
 		<textarea name="post_title" placeholder="Post Title (optional)" maxlength="100" col="127" id="post-title"></textarea>
 		<textarea name="post_body" placeholder="Post text" required maxlength="3000" id="post-body"></textarea>
-		<button>Post <i class="fas fa-arrow-up"></i></button>
+		<button id="send">Post <i class="fas fa-arrow-up"></i></button>
 	</form>
 {% endblock %}
