--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -36,15 +36,14 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="collapse-target">
-				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N</b></span>
+				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N&ensp;</b></span>
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="" data-target="dropdown_target" href="#" data-toggle="dropdown">
-								<button class="btn bg-primary text-white" type="button"><i class="fas fa-chevron-circle-down"></i> Dropdown</button>								
-							</a>
+								<button class="btn bg-primary text-white" type="button"><i class="fas fa-chevron-circle-down"></i> Dropdown</button></a>
 							<div class="dropdown-menu" 	aria-labelledby="dropdown_target">
 								<ul class="navbar-nav">
 								<a href=".." class="dropdown-item"><button class="btn bg-primary text-white" type="button">Action</button></a>
@@ -70,25 +69,21 @@
 						<li class="nav-item">
 							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
 						</li>
-						<div id="not_logged_buttons">
-							<li class="navbar-nav">
-								<a href="../register" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
-							</li>
-							<li class="navbar-nav">
-								<a href="../login" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
-							</li>
-						</div>
-						<div id="logged_buttons">
-							<li class="navbar-nav">
-								<a href="../create_post" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
-							</li>
-							<li class="navbar-nav">
-								<a href="../user" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
-							</li>
-							<li class="navbar-nav">
-								<a href="../logout" class="text-decoration-none text-right"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
-							</li>
-						</div>
+						<li class="navbar-item" id="unlogged_button1">
+							<a href="../register" class="text-decoration-none unlogged_buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
+						</li>
+						<li class="navbar-item" id="unlogged_button2">
+							<a href="../login" class="text-decoration-none unlogged buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
+						</li>
+						<li class="navbar-item" id="logged_button1">
+							<a href="../create_post" class="text-decoration-none"><button class="btn bg-primary text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+						</li>
+						<li class="navbar-item" id="logged_button2">
+							<a href="../user" class="text-decoration-none logged_buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
+						</li>
+						<li class="navbar-item" id="logged_button3">
+							<a href="../logout" class="text-decoration-none logged_buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
+						</li>
 					</ul>
 				</div>
 			</nav>		
@@ -116,7 +111,6 @@
 						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-users"></i> About</button></a>
 						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-tools"></i> Supporto</button></a>
 						<a href="https://github.com/TommyAnd/kevin" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fab fa-github"></i> Github</button></a>
-						<!--<span><a href="#" title="Torna su" aria-hidden="true" data-attribute="back-to-top" class="back-to-top"><i class="far fa-arrow-alt-circle-up"></i></a></span>-->
 						<a href="#" class="text-decoration-none back-to-top" title="Torna su"><button class="btn fbutton" type="button"><i class="far fa-arrow-alt-circle-up"></i></button></a>
 					</div>
 				</div>
@@ -138,11 +132,17 @@
 
 		// Check if it's logged in
 		if (document.cookie.includes('access_token') && document.cookie.includes('refresh_token')) {
-			document.getElementById("not_logged_buttons").style.display = 'none';
-			document.getElementById("logged_buttons").style.display = 'unset';
+			document.getElementById("unlogged_button1").style.display = 'none';
+			document.getElementById("unlogged_button2").style.display = 'none';
+			document.getElementById("logged_button1").style.display = 'unset';
+			document.getElementById("logged_button2").style.display = 'unset';
+			document.getElementById("logged_button3").style.display = 'unset';
 		} else {
-			document.getElementById("not_logged_buttons").style.display = 'unset';
-			document.getElementById("logged_buttons").style.display = 'none';
+			document.getElementById("unlogged_button1").style.display = 'unset';
+			document.getElementById("unlogged_button2").style.display = 'unset';
+			document.getElementById("logged_button1").style.display = 'none';
+			document.getElementById("logged_button2").style.display = 'none';
+			document.getElementById("logged_button3").style.display = 'none';
 		}
 
 		{% if alert %}
