[Website] New menu

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -32,8 +32,8 @@
 	<body>
 		{% if (nav | default("there", false)) %}
 			<nav class="navbar navbar-expand-xl navbar-dark bg-primary fixed-top">
- 				<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse-target">
-					<span class="navbar-toggler-icon"></span>
+ 				<button class="btn bg-primary navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
+					<span class="fas fa-ellipsis-h"> Menu</span>
 				</button>
 				<div class="collapse navbar-collapse" id="collapse-target">
 				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N&ensp;</b></span>
