--- a/website/application/static/style/layout.css
+++ b/website/application/static/style/layout.css
@@ -16,6 +16,10 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+.navbar-toggler {
+	font-family: 'Roboto', sans-serif;
+}
+
 .n{
 	font-family: 'Stylish', sans-serif; 
 	font-size: 20px;
