--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -3,14 +3,14 @@
 	<head>
 		<title>Kevin | {% block title %}{% endblock %}</title>
 
-		<!--  STYLE  -->
+		<!-- STYLE -->
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		{% block css %}{% endblock %}
 
-		<!--  META  -->
+		<!-- META -->
 		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
 		<meta name="language" content="IT" />
 		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti" />
@@ -20,7 +20,7 @@
 		<meta name="keywords" content="kevin forum contenuti" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
-		<!--  JS  --> 
+		<!-- JS --> 
 		<script src="https://kit.fontawesome.com/2e6be9a3fe.js" crossorigin="anonymous"></script>
 		<script src="{{ url_for('static', filename='js/up.js') }}"></script>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -31,58 +31,58 @@
 
 	<body>
 		{% if (nav | default("there", false)) %}
-			<nav class="navbar navbar-expand-xl navbar-dark bg-primary fixed-top">
- 				<button class="btn bg-primary navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
+			<nav class="navbar navbar-expand-xl navbar-dark fixed-top topnav">
+ 				<button class="menu btn navbar-toggler border-0 text-white" data-toggle="collapse" data-target="#collapse-target">
 					<span class="fas fa-ellipsis-h"> Menu</span>
 				</button>
 				<div class="collapse navbar-collapse" id="collapse-target">
 				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N&ensp;</b></span>
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-home"></i> Home</button></a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="" data-target="dropdown_target" href="#" data-toggle="dropdown">
-								<button class="btn bg-primary text-white" type="button"><i class="fas fa-chevron-circle-down"></i> Dropdown</button></a>
+								<button class="nbtn btn text-white" type="button"><i class="fas fa-chevron-circle-down"></i> Dropdown</button></a>
 							<div class="dropdown-menu" 	aria-labelledby="dropdown_target">
 								<ul class="navbar-nav">
-								<a href=".." class="dropdown-item"><button class="btn bg-primary text-white" type="button">Action</button></a>
-								<a href=".." class="dropdown-item"><button class="btn bg-primary text-white" type="button">Another Action</button></a>
+								<a href=".." class="dropdown-item"><button class="btn ddbtn text-white" type="button">Action</button></a>
+								<a href=".." class="dropdown-item"><button class="btn ddbtn text-white" type="button">Another Action</button></a>
 								</ul>
 							</div>	
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-cat"></i> Meme</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-code"></i> Informatica</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-flask"></i> Scienza</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fas fa-feather-alt"></i> Dev's Blog</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fas fa-feather-alt"></i> Dev's Blog</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="btn bg-primary text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
+							<a href=".." class="text-decoration-none"><button class="nbtn btn text-white" type="button"><i class="fab fa-rocketchat"></i> AMA/Just Chatting</button></a>
 						</li>
 						<li class="navbar-item" id="unlogged_button1">
-							<a href="../register" class="text-decoration-none unlogged_buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
+							<a href="../register" class="text-decoration-none unlogged_buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-user-plus"></i> Register</button></a>
 						</li>
 						<li class="navbar-item" id="unlogged_button2">
-							<a href="../login" class="text-decoration-none unlogged buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
+							<a href="../login" class="text-decoration-none unlogged buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button1">
-							<a href="../create_post" class="text-decoration-none"><button class="btn bg-primary text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+							<a href="../create_post" class="text-decoration-none"><button class="nbtn btn text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button2">
-							<a href="../user" class="text-decoration-none logged_buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
+							<a href="../user" class="text-decoration-none logged_buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button3">
-							<a href="../logout" class="text-decoration-none logged_buttons"><button class="btn bg-primary text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
+							<a href="../logout" class="text-decoration-none logged_buttons"><button class="nbtn btn text-white" type="button"><i class="fas fa-sign-out-alt"></i> Logout</button></a>
 						</li>
 					</ul>
 				</div>
