--- a/website/application/static/style/user.css
+++ b/website/application/static/style/user.css
@@ -12,6 +12,7 @@
 	margin-top: 3vh;
 	font-size: 1.8em;
 	font-weight: bold;
+	color: #345DA7;
 }
 
 .flex2 {
@@ -50,4 +51,5 @@
 #user_email {
 	margin-top: 2.5vh;
 	font-size: 1.5em;
+	color: #4BB4DE;
 }
