--- a/website/application/templates/create_post.html
+++ b/website/application/templates/create_post.html
@@ -7,9 +7,16 @@
 {% endblock %}
 
 {% block content %}
+	<h1 id="title">Crea post</h1>
 	<form method="GET" action="/create_post">
 		<textarea name="post_title" placeholder="Post Title (optional)" maxlength="100" col="127" id="post-title"></textarea>
 		<textarea name="post_body" placeholder="Post text" required maxlength="3000" id="post-body"></textarea>
 		<button id="send">Post <i class="fas fa-arrow-up"></i></button>
 	</form>
+	<!-- <h1 id="title">Crea post</h1>
+	<form method="GET" action="/create_post">
+		<textarea name="post_title" placeholder="Titolo del post (opzionale)" id="post-title"></textarea>
+		<textarea name="post_body" placeholder="Testo del post" id="post-body" required></textarea>
+		<button id="send">Post <i class="fas fa-arrow-up"></i>
+	</form> -->
 {% endblock %}
