[Website] Added logo
Added the favicon and the logo in the navbar

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -4,6 +4,7 @@
 		<title>Kevin | {% block title %}{% endblock %}</title>
 
 		<!-- STYLE -->
+		<link rel="icon" type="image/png" href="../static/img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style/layout.css') }}">
 		<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
@@ -36,7 +37,7 @@
 					<span class="fas fa-ellipsis-h"> Menu</span>
 				</button>
 				<div class="collapse navbar-collapse" id="collapse-target">
-				<span class="navbar-text text-white font-weight-bold"><i class="fab fa-kickstarter-k"></i><i class="fab fa-internet-explorer"></i><i class="fab fa-vimeo-v"></i><i class="fas fa-info"></i><b class="n">N&ensp;</b></span>
+				<span><img class="logo" type="image/png" src="../static/img/Logo_white_nobackground.png" alt="Kevin's logo"></span>	
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-home"></i> Home</button></a>
