[Website] Caesar's minor changes (fixed meta)

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -12,13 +12,10 @@
 		{% block css %}{% endblock %}
 
 		<!-- META -->
-		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-		<meta name="language" content="IT" />
-		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti" />
-		<meta name="owner" content="Andreanelli Bartocetti Parri Mariotti" />
-		<meta name="reply-to" content="" />
-		<meta name="description" content="forum kevin" />
-		<meta name="keywords" content="kevin forum contenuti" />
+		<meta charset="UTF-8">
+		<meta lang="it">
+		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti">
+		<meta name="keywords" content="kevin forum">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<!-- JS --> 
@@ -146,7 +143,7 @@
 		}
 
 		{% if alert %}
-			// If there's an alert, return with an alert box
+			// If there's an alert, return an alert box
 			alert("{{alert}}");
 		{% endif %}
 	</script>
