[Website] Language: English

--- a/website/application/templates/layout.html
+++ b/website/application/templates/layout.html
@@ -13,7 +13,7 @@
 
 		<!-- META -->
 		<meta charset="UTF-8">
-		<meta lang="it">
+		<meta lang="en">
 		<meta name="author" content="Andreanelli Bartocetti Parri Mariotti">
 		<meta name="keywords" content="kevin forum">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -49,16 +49,16 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-globe-europe"></i> News & Attualit&agrave;</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-globe-europe"></i> News & Actuality</button></a>
 						</li>
 						<li class="nav-item">
 							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-cat"></i> Meme</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-code"></i> Informatica</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-code"></i> Informatic</button></a>
 						</li>
 						<li class="nav-item">
-							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-flask"></i> Scienza</button></a>
+							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-flask"></i> Science</button></a>
 						</li>
 						<li class="nav-item">
 							<a href=".." class="text-decoration-none"><button class="navbtn btn text-white hvr-icon-grow" type="button"><i class="hvr-icon fas fa-feather-alt"></i> Dev's Blog</button></a>
@@ -73,7 +73,7 @@
 							<a href="../login" class="text-decoration-none unlogged buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-sign-in-alt"></i> Login</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button1">
-							<a href="../create_post" class="text-decoration-none"><button class="navbtn btn text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Crea Post</button></a>
+							<a href="../create_post" class="text-decoration-none"><button class="navbtn btn text-white logged buttons" type="button"><i class="fas fa-plus-square"></i> Create Post</button></a>
 						</li>
 						<li class="navbar-item" id="logged_button2">
 							<a href="../user" class="text-decoration-none logged_buttons"><button class="navbtn btn text-white" type="button"><i class="fas fa-user"></i> Profile</button></a>
@@ -106,7 +106,7 @@
 				<div class="row text-center inline-block">
 					<div class="col-md">
 						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-users"></i> About</button></a>
-						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-tools"></i> Supporto</button></a>
+						<a href="#" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fas fa-tools"></i> Support</button></a>
 						<a href="https://github.com/TommyAnd/kevin" class="text-decoration-none "><button class="btn text-white fbutton" type="button"><i class="fab fa-github"></i> Github</button></a>
 						<a href="#" class="text-decoration-none back-to-top" title="Torna su"><button class="btn fbutton hvr-icon-bob" type="button"><i class="hvr-icon far fa-arrow-alt-circle-up"></i></button></a>
 					</div>
